welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:17: error: expected start of definition
	override def run() {
                 ^MethodsDogHouse:48: error: Unmatched closing brace '}' ignored here
}
^